# haskell-socket

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTORS.txt  LICENSE  Main.hs  README.md  Test.hs  appveyor.yml  socket.cabal  stack-ghc7.10.3.yaml  stack-ghc7.8.4.yaml  stack-ghc8.0.2.yaml  stack.yaml
cbits/: hs_socket.c  hs_socket_posix.c  hs_socket_win32.c  misc.c
examples/: HelloWorldServer.hs
include/: hs_socket.h  hs_socket_posix.h  hs_socket_win32.h  misc.h
platform/linux/cbits/: hs_socket.c
platform/linux/include/: hs_socket.h
platform/linux/src/System/Socket/Internal/: Platform.hsc
platform/win32/cbits/: hs_socket.c
platform/win32/include/: hs_socket.h
platform/win32/src/System/Socket/Internal/: Platform.hsc
src/Network/: Database.hsc
src/System/: Socket.hsc
src/System/Socket/: Address.hs  Exception.hs  Family.hs  Internal.hs  Internal.hsc  Options.hsc  Protocol.hs  Type.hs  Unsafe.hs  Unsafe.hsc
src/System/Socket/Address/: Inet.hsc  Inet6.hsc  SockAddrIn.hsc  SockAddrIn6.hsc  SockAddrUn.hsc  Unix.hsc
src/System/Socket/Family/: INET.hsc  INET6.hsc  Inet.hsc  Inet6.hsc  UNIX.hsc
src/System/Socket/Internal/: AddrInfo.hsc  AddressInfo.hsc  Event.hs  Exception.hs  Exception.hsc  FFI.hs  Message.hsc  Msg.hsc  MsgFlags.hsc  Socket.hs  Socket.hsc  SocketOption.hsc
src/System/Socket/Protocol/: Default.hs  Default.hsc  SCTP.hsc  TCP.hsc  UDP.hsc
src/System/Socket/Type/: DGRAM.hsc  Datagram.hsc  RAW.hsc  Raw.hsc  SEQPACKET.hsc  STREAM.hsc  SequentialPacket.hsc  Stream.hsc
test/: test.hs
tests/: AddrInfo.hs  Basic.hs  EOPNOTSUPP.hs  EPIPE.hs  IPV6_V6ONLY.hs  NonBlockingIO.hs  PingPong.hs  TCP-sendAll.hs  TCP-sendAndRecvAll.hs  TCP.hs  UDP.hs
