name:                socket
version:             0.5.1.0
synopsis:            A portable and extensible sockets library.
description:
  This library is a minimal and platform-independant interface for
  BSD style networking.
  .
  The following is a list of known extension packages:
  .
    - https://hackage.haskell.org/package/socket-sctp
  .
  Also see README.md for details.

license:             MIT
license-file:        LICENSE
author:              Lars Petersen
maintainer:          info@lars-petersen.net
category:            System, Network
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/lpeterse/haskell-socket
bug-reports:         https://github.com/lpeterse/haskell-socket/issues
tested-with:         GHC==7.10.1, GHC==7.8.3
extra-source-files:  README.md
                     CHANGELOG.md
                     CONTRIBUTORS.txt
                     platform/linux/src/System/Socket/Internal/Platform.hsc
                     platform/linux/include/hs_socket.h
                     platform/linux/cbits/hs_socket.c
                     platform/win32/src/System/Socket/Internal/Platform.hsc
                     platform/win32/include/hs_socket.h
                     platform/win32/cbits/hs_socket.c

library
  exposed-modules:     System.Socket
                     , System.Socket.Family
                     , System.Socket.Family.Inet
                     , System.Socket.Family.Inet6
                     , System.Socket.Type
                     , System.Socket.Type.Raw
                     , System.Socket.Type.Datagram
                     , System.Socket.Type.Stream
                     , System.Socket.Type.SequentialPacket
                     , System.Socket.Protocol
                     , System.Socket.Protocol.UDP
                     , System.Socket.Protocol.TCP
                     , System.Socket.Unsafe
  other-modules:       System.Socket.Internal.Socket
                     , System.Socket.Internal.Exception
                     , System.Socket.Internal.Message
                     , System.Socket.Internal.AddressInfo
                     , System.Socket.Internal.Platform
  build-depends:       base >= 4.7 && < 5
                     , bytestring < 0.11
  hs-source-dirs:      src
  build-tools:         hsc2hs
  default-language:    Haskell2010
  install-includes:    hs_socket.h
  ghc-options:         -Wall
  if os(windows)
    include-dirs:      platform/win32/include
    hs-source-dirs:    platform/win32/src
    c-sources:         platform/win32/cbits/hs_socket.c
    extra-libraries:   ws2_32
  else
    include-dirs:      platform/linux/include
    hs-source-dirs:    platform/linux/src
    c-sources:         platform/linux/cbits/hs_socket.c

test-suite UDP
  hs-source-dirs:      tests
  main-is:             UDP.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring < 0.11
                     , socket
                     , async

test-suite TCP
  hs-source-dirs:      tests
  main-is:             TCP.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring < 0.11
                     , socket
                     , async

test-suite TCP-sendAndRecvAll
  hs-source-dirs:      tests
  main-is:             TCP-sendAndRecvAll.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring < 0.11
                     , socket
                     , async

test-suite PingPong
  hs-source-dirs:      tests
  main-is:             PingPong.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring < 0.11
                     , socket
                     , async

test-suite AddrInfo
  hs-source-dirs:      tests
  main-is:             AddrInfo.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring < 0.11
                     , socket

test-suite NonBlockingIO
  hs-source-dirs:      tests
  main-is:             NonBlockingIO.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring < 0.11
                     , socket
                     , async

test-suite NonBlockingIO-threaded
  hs-source-dirs:      tests
  main-is:             NonBlockingIO.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , bytestring < 0.11
                     , socket
                     , async

test-suite IPV6_V6ONLY
  hs-source-dirs:      tests
  main-is:             IPV6_V6ONLY.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring < 0.11
                     , socket
                     , async

source-repository head
  type:     git
  location: git://github.com/lpeterse/haskell-socket.git
