name:                socket
version:             0.6.2.0
synopsis:            An extensible socket library.
description:
  This library is a minimal cross-platform interface for
  BSD style networking.

license:             MIT
license-file:        LICENSE
author:              Lars Petersen
maintainer:          info@lars-petersen.net
category:            System, Network
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/lpeterse/haskell-socket
bug-reports:         https://github.com/lpeterse/haskell-socket/issues
tested-with:         GHC==7.8.1, GHC==7.8.2, GHC==7.8.3, GHC==7.8.4,
                     GHC==7.10.1, GHC==7.10.2, GHC==7.10.3, GHC==8.0.1
extra-source-files:  README.md
                     CHANGELOG.md
                     CONTRIBUTORS.txt
                     platform/linux/src/System/Socket/Internal/Platform.hsc
                     platform/linux/include/hs_socket.h
                     platform/linux/cbits/hs_socket.c
                     platform/win32/src/System/Socket/Internal/Platform.hsc
                     platform/win32/include/hs_socket.h
                     platform/win32/cbits/hs_socket.c

library
  exposed-modules:     System.Socket
                     , System.Socket.Family.Inet
                     , System.Socket.Family.Inet6
                     , System.Socket.Type.Raw
                     , System.Socket.Type.Datagram
                     , System.Socket.Type.Stream
                     , System.Socket.Type.SequentialPacket
                     , System.Socket.Protocol.UDP
                     , System.Socket.Protocol.TCP
                     , System.Socket.Unsafe
  other-modules:       System.Socket.Internal.Socket
                     , System.Socket.Internal.Exception
                     , System.Socket.Internal.Message
                     , System.Socket.Internal.AddressInfo
                     , System.Socket.Internal.Platform
  build-depends:       base >= 4.7 && < 5
                     , bytestring < 0.11
  hs-source-dirs:      src
  build-tools:         hsc2hs
  default-language:    Haskell2010
  install-includes:    hs_socket.h
  ghc-options:         -Wall
  if os(windows)
    include-dirs:      platform/win32/include
    hs-source-dirs:    platform/win32/src
    c-sources:         platform/win32/cbits/hs_socket.c
    extra-libraries:   ws2_32
  else
    include-dirs:      platform/linux/include
    hs-source-dirs:    platform/linux/src
    c-sources:         platform/linux/cbits/hs_socket.c

test-suite default
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    test.hs
  build-depends:
      base >= 4.7 && < 5
    , tasty >= 0.11
    , tasty-hunit
    , tasty-quickcheck
    , QuickCheck >= 2.9 && <3
    , async
    , bytestring
    , socket

test-suite threaded
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    test.hs
  ghc-options:
    -threaded
  build-depends:
      base >= 4.7 && < 5
    , tasty >= 0.11
    , tasty-hunit
    , tasty-quickcheck
    , QuickCheck >= 2.9 && <3
    , async
    , bytestring
    , socket

source-repository head
  type:     git
  location: git://github.com/lpeterse/haskell-socket.git
